[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Rashid Mingazov <rashid.mingazov@mircod.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^2.23.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
